--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
+title: Alexandre
+logo: "/assets/images/outline_terrain_black_48dp.png"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
-minimal_mistakes_skin: mint
+  A personal portfolio site.
+twitter_username: alex1996arm
+github_username: alex1996arm
+minimal_mistakes_skin: air
 search: true
 
 # Build settings
@@ -58,9 +57,9 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Alexandre Roberge-Milanese"
+  name   : "Alexandre <br /> Roberge-Milanese"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My Portfolio site"
+  bio    : "Aspiring Software Engineer"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
@@ -71,15 +70,12 @@ author:
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      url: "https://"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+      url: "https://github.com/alex1996arm"
 
 defaults:
   # _posts
