--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
   - title: "About"
-    url: /about/
+    url: /
   - title: "Projects"
-    url: /porfolio/
-  - title: "Research"
-    url: /research/
+    url: /projects/
   - title: "Experience"
     url: /experience/
+  - title: "Research"
+    url: /research/
