added resume, changed sidebar text

--- a/_config.yml
+++ b/_config.yml
@@ -73,10 +73,10 @@ author:
       url: "https://github.com/alex1996arm"
     - label: "Resume"
       icon: "fas fa-poll-h"
-      url: "https://github.com/alex1996arm"
+      url: "/assets/Resume-Alexandre-Roberge-Milanese.pdf"
     - label: "LinkedIn"
       icon: "fab fa-linkedin"
-      url: "https://github.com/alex1996arm"
+      url: "www.linkedin.com/in/arobergemilanese"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/alex1996arm"
