changing pages that aren't useful

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 main:
   - title: "About"
     url: /
-  - title: "Projects"
-    url: /projects/
+  - title: "Resume"
+    url: /assets/Resume-Alexandre-Roberge-Milanese.pdf
   - title: "Experience"
     url: /experience/
   - title: "Research"
