--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ plugins:
 author:
   name   : "Alexandre <br /> Roberge-Milanese"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Aspiring Software Engineer"
+  bio    : "Software Engineer"
   links:
     - label: " Oakville, Ontario"
       icon: "fas fa-map-marker-alt"
